# ripser.py

./: .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  Approximate Sparse Filtrations.html  Basic Usage.html  CHANGELOG.md  CNAME  DEPLOY.md  LICENSE.txt  Lower Star Image Filtrations.html  Lower Star Time Series.html  MANIFEST.in  Makefile  Moebius Strip And The Field of Coefficients.html  README.md  Representative Cocycles.html  Ripser Demonstration.html  Sparse Distance Matrices.html  about.html  appveyor.yml  background.html  build-distribution.sh  genindex.html  index.html  objects.inv  paper.bib  paper.md  py-modindex.html  pyproject.toml  reference.html  search.html  searchindex.js  setup.py
.github/: dependabot.yml
_modules/: index.html
_sources/: background.rst.txt  index.rst.txt  reference.rst.txt
_static/: basic.css  documentation_options.js
docs/: .gitignore  about.rst  conf.py  index.rst  requirements.txt
notebooks/: Approximate Sparse Filtrations.html  Basic Usage.html  Basic Usage.ipynb  Greedy Subsampling for Fast Approximate Computation.html  Greedy Subsampling for Fast Approximate Computation.ipynb  Lower Star Image Filtrations.html  Lower Star Image Filtrations.ipynb  Lower Star Time Series.html  Moebius Strip And The Field of Coefficients.html  Moebius Strip And The Field of Coefficients.ipynb  Representative Cocycles.html  Sparse Distance Matrices.html
reference/: index.html
ripser/: MatlabBasics.ipynb  README.md  __init__.py  plotDGMs.m  ripser.cpp  ripser.hpp  ripser.mexa64  ripser.mexmaci64  ripser.mexw64  ripser.py  ripserDM.m  ripserPC.m
src/: pyRipser.cp313-win_amd64.pyd
test/: test_lower_star.py  test_memory_estimation.py  test_ripser.py  test_ripser_sklearn.py  test_visuals.py
tests/: __init__.py  test_lower_star.py  test_ripser.py  test_ripser_sklearn.py
(+30 files in other folders)
